<resources>
    <string name="app_name">Airtel Drive</string>
    <string name="survey_id_text">Survey Id : </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="traceroute">Trace Route Test</string>
    <string name="fiveGParameter">SIM PARAMETERS</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Web Speed Test</string>
    <string name="nav_movies">Video Stream Test</string>
    <string name="nav_notifications">Upload/Download Test</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="activity_title_about_us">About Us</string>

    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="webtest_title">Web Test</string>
    <string name="uploadtest_title">Upload/Download Test</string>
    <string name="videotest_title">Video Streaming Test</string>
    <string name="myphonedetail_title">My Phone Monitor</string>
    <string name="mymapview_title">My Map View</string>
    <string name="upload_download">Settings</string>
    <string name="map_settings_title">Map View Settings</string>
    <string name="call_sms_mms">Call Test</string>
    <string name="network_monitor_mms">Network Monitor Test</string>
    <string name="web_test">NEW WEB TEST</string>
    <string name="new_video_test">NEW VIDEO TEST</string>
    <string name="main_settings_title">Main App Settings</string>

    <string name="Normal">Normal View</string>

    <string name="Terrain">Terrain View</string>
    <string name="Satellite">Satellite View</string>
    <string name="Hybrid">Hybrid View</string>
    <string name="mapsettings">Settings</string>
    <string name="google">www.google.com</string>
    <string name="fb">www.facebook.com</string>
    <string name="twitter">www.gmail.com</string>
    <string name="wiki">www.wikipedia.org</string>
    <string name="yahoo">www.yahoo.com</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="dwnld">Download</string>
    <string name="Home">Home</string>
    <string name="speed">Speed</string>
    <string name="battery">Battery</string>
    <string name="network">Network</string>
    <string name="speedtest">Data Speed Test</string>
    <string name="sendsms">Send SMS</string>
    <string name="cts">Start CTS</string>

    <string name="charts">Charts</string>
    <string name="umang">Umang</string>
    <string name="validation_text">Kindly enter your mobile number to validate through SMS.</string>
    <string name="lessthanequalto"><![CDATA[<=]]></string>
    <string name="greaterthanequalto"><![CDATA[>=]]></string>
    <string name="sms_retry">If sms is not received within 20 seconds , please retry!</string>
    <string name="call_text">Enter any valid number or press + to pick any number from contact list to make a test call.
        This may require permission to access your contact book. \nVoice call will be made on the selected number. After you disconnect your call, the <b>recorded</b> file will be uploaded for further analysis!</string>
    <string name="record_device_permissions">To record and save the call, you may need to allow recording and logging permissions to run the call test.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="wifi">Wifi Coverage Test</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="floor_plan">Create Floor Plan</string>
    <string name="heatmaplistactivityname">Heat Map List</string>
    <string name="drive">Drive</string>
    <string name="building">In Building</string>
    <string name="workOrder">Work Orders</string>
    <string name="dashboard">Dashboard</string>
    <string name="in_building">In Building</string>
    <string name="wifiActivity">Indoor Survey</string>
    <string name="saveandstart">Save &amp; Start</string>
    <string name="wifi_coverage_test">Wifi Coverage Test</string>
    <string name="walk_test">Perform Walk Test</string>
    <string name="help_title">You may follow any of the following steps.</string>
    <string name="help_step_1"><![CDATA[Draw a layout > Add Router > Start Walk test]]></string>
    <string name="help_step_2"><![CDATA[Just Add Router > Start Walk test]]></string>
    <string name="help_step_3">Simply Proceed for Walk test without Wifi Router and using default Floor map.</string>
    <string name="currentversion">L1</string>
    <string name="survey_list">Surveys</string>
    <string name="accessibility_service_label" />
    <string name="accessibility_service_description">my_description</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Web Speed Test</item>
        <item>Video Stream Test</item>
        <item>Upload/Download Test</item>
        <item>Settings</item>
        <item>Download</item>
        <item>Upload</item>
    </string-array>
</resources>
