<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/normal_view"
        android:orderInCategory="100"
        android:title="@string/Normal"
        app:showAsAction="never" />
    <item
        android:id="@+id/terrain_view"
        android:orderInCategory="100"
        android:title="@string/Terrain"
        app:showAsAction="never" />
    <item
        android:id="@+id/sat_view"
        android:orderInCategory="100"
        android:title="@string/Satellite"
        app:showAsAction="never" />
    <item
        android:id="@+id/hybrid_view"
        android:orderInCategory="100"
        android:title="@string/Hybrid"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/mapsettings"
        app:showAsAction="never" />
</menu>